kubernetes/ca-teamdman-gifts/base/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gifts-frontend
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: gifts-frontend
  template:
    metadata:
      labels: 
        app: gifts-frontend
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      # serviceAccountName: gifts-sa # not needed for the frontend
      containers:
        - name: gifts-frontend
          image: teamdman.azurecr.io/gifts-frontend:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 3000
