kubernetes/ca-teamdman-gifts/base/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quick-start
spec:
  serviceAccountName: gifts-sa
  containers:
    - image: ghcr.io/azure/azure-workload-identity/msal-go
      name: oidc
  nodeSelector:
    kubernetes.io/os: linux
