kubernetes/ca-teamdman-gifts/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: gifts-frontend
spec:
  ports:
    - port: 3000
  selector: 
    app: gifts-frontend
