kubernetes/ca-teamdman-gifts/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gifts-backend
spec:
  ports:
    - port: 80
  selector: 
    app: gifts-backend
